--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -669,5 +669,5 @@ border-radius: 10px;
 
 .part{
     height: 100vh !important;
-    height: calc(var(--vh, 1vh) * 100);
+    height: calc(var(--vh, 1vh) * 100) !important;
 }
