--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,7 +268,6 @@ a{
     height: 100vh;
     transform: translateX(-100%);
     transition: all 300ms ease;
-
 }
 nav{
     position: fixed;
@@ -337,25 +336,32 @@ nav{
     transform: rotate(-45deg);
 }
 /* main */
-.bg{
+/* .bg{
     height: 100vh;
     position: relative;
+} */
+.video-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
-#landingPageVideo{
-   position: absolute;
-   z-index: -1;
-
-   background-image: url("../img/landingPageImage.jpg");
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
-   height: 100vh;
-   width: 100vw;
+.video-container video {
+	min-width: 100%;
+	min-height: 100%;
+  position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	object-fit: cover;
+    z-index: -10;
 }
 #hero{
     padding-top: 30vh;
     text-align: center;
-    color: black; 
+    color: var(--bez); 
 }
 #hero h1{
     padding-bottom: 20px;
@@ -665,7 +671,10 @@ border-radius: 10px;
     padding: 10px;
 }
 
-.part{
+/* .part{
     height: 100vh !important;
     height: calc(var(--vh, 1vh) * 100) !important;
-}
+    height: calc(100vh - 40vh) !important;
+    position: relative;
+    bottom: 0%; 
+} */
