--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,7 +351,7 @@ nav{
 .video-container video {
 	min-width: 100%;
 	min-height: 100%;
-  position: absolute;
+    position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -359,9 +359,12 @@ nav{
     z-index: -10;
 }
 #hero{
-    padding-top: 30vh;
     text-align: center;
     color: var(--bez); 
+    position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 #hero h1{
     padding-bottom: 20px;
@@ -566,6 +569,9 @@ nav{
     }
 }
 @media screen and (max-width: 576px){
+    #hero h1{
+        font-size: 140px;
+    }
     #reservation{
         width: 80%;
     }
@@ -589,6 +595,9 @@ nav{
     }
 }
 @media screen and (max-width: 376px){
+    #hero h1{
+        font-size: 120px;
+    }
     #reservation{
         width: 90%;
     }
